deploy-casino-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: casino-api  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: casino-api
  template:
    metadata:
      labels:
        app: casino-api
    spec:
      containers:
       - name: casino-api
         image: criptoland.azurecr.io/casino-api-dev
         ports:
         - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: casino-api 
spec:
  type: ClusterIP
  ports:
  - port: 3001
  selector:
    app: casino-api
