deploy-home-cripto.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homedocker  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homedocker
  template:
    metadata:
      labels:
        app: homedocker
    spec:
      containers:
      - name: homedocker
        image: criptoland.azurecr.io/home-cripto:latest 
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: homedocker 
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: homedocker
