in-az.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home2
  template:
    metadata:
      labels:
        app: home2
    spec:
      containers:
      - name: home2
        image: criptoland.azurecr.io/prueba
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home1  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home1
  template:
    metadata:
      labels:
        app: home1
    spec:
      containers:
      - name: home1
        image: criptoland.azurecr.io/cripto-docker
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: home1  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: home1
---
apiVersion: v1
kind: Service
metadata:
  name: home2
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: home2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market
  template:
    metadata:
      labels:
        app: market
    spec:
      containers:
      - name: market
        image: criptoland.azurecr.io/market
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: market  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: market
