load.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadcripto
spec:
  selector:
    app: prueba
  ports:
    - port: 80
  type: LoadBalancer
