load2.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadcripto2
spec:
  selector:
    app: home1
  ports:
    - port: 80
  type: LoadBalancer
