serv-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dapp-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dapp-backend
  template:
    metadata:
      labels:
        app: dapp-backend
    spec:
      containers:
      - name: dapp-backend
        image: criptoland.azurecr.io/dappbackend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dapp-backend  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: dapp-backend
