service-homedocker.yaml
apiVersion: v1
kind: Service
metadata:
  name: homenew
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: homernew
