service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homecripto
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: homecripto
